# telco_churn_case

./: README.md  notes.md  pyproject.toml
notebooks/: 00_exploration_telco_churn_case.ipynb  01_telco_churn_case.ipynb  gboost_telco.pkl
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: business_impact.py  data_io.py  eda.py  feature_engineering.py  gboost_telco.pkl  model_runner.py  tuning_shap.py
