[project]
name = "telco-churn-case"
version = "0.1.0"
description = ""
authors = [
    {name = "Sidnei",email = "sidneipanegassijr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "telco_churn_case", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
