[project]
name = "telco-churn-case"
version = "0.1.0"
description = ""
authors = [
    {name = "Sidnei",email = "sidneipanegassijr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "xgboost (>=3.0.1,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "shap (>=0.47.2,<0.48.0)",
    "matplotlib (>=3.10.3,<4.0.0)"
]

[tool.poetry]
packages = [{include = "telco_churn_case", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
